@@ -1,3 +1,4 @@
+- Added new public property LastDragEffect which supplies the last executed drag effect.
 V5.1.3: (17 Apr 2013)
 - Fixed #340: GetHitTestInfoAt on right border of fixed column.
 - Fixed #337: Cannot "grab" item for dragging, odd behaviour of multi selecting with the selection
